<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/app_color_primary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_toolbar"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_aplikasi_kalkulator_sederhana"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_action_bar"
        android:background="@color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_number_operations_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/light_grey"
        android:layout_margin="14dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="12dp">

            <LinearLayout
                android:id="@+id/ll_input_number_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_input_number_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_number_1"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_input_number_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_input_number_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal"
               app:layout_constraintTop_toBottomOf="@+id/ll_input_number_1">

                <TextView
                    android:id="@+id/tv_input_number_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_number_2"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_input_number_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_number_operations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_input_number_2"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:onClick="plus"
                    android:text="@string/text_tambah"
                    android:textSize="16sp"
                    android:layout_margin="8dp">
                </Button>

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:onClick="minus"
                    android:text="@string/text_kurang"
                    android:textSize="16sp"
                    android:layout_margin="8dp">
                </Button>

                <Button
                    android:id="@+id/btn_multiplied"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:onClick="multiplied"
                    android:text="@string/text_kali"
                    android:textSize="16sp"
                    android:layout_margin="8dp">
                </Button>

                <Button
                    android:id="@+id/btn_divided"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:onClick="divided"
                    android:text="@string/text_bagi"
                    android:textSize="16sp"
                    android:layout_margin="8dp">
                </Button>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_result_number_operations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_number_operations"
                android:text="@string/text_result_number_operations"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_result_number_operations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_result_number_operations"
                android:gravity="center"
                android:layout_marginTop="26dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/app_color_primary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>